Closed
Bug 217954
Opened 22 years ago
Closed 22 years ago
Password manager crash going Back to vons.com
Categories
(Firefox :: Address Bar, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: jruderman, Assigned: bryner)
References
Details
(Keywords: crash)
Going back to vons.com crashes if I have saved my vons.com username and password.
- Only crashes if I have a saved password. If I delete my saved password, it
stops crashing.
- Only vons.com crashes. Other sites with saved passwords do not crash.
- It doesn't matter what username and password I save.
- It doesn't matter what page I go back from.
MozillaFirebird 0831 (build from DamianMoran) crashes.
MozillaFirebird 0827 (official build) does not crash.
| Reporter | ||
Comment 1•22 years ago
|
||
-> bryner@brianryner.com, who touched password manager recently.
Assignee: hewitt → bryner
Comment 2•22 years ago
|
||
Seeing in Linux as well (20030901). I was able to crash it once (and only once)
using the test case for bug 216395. Brian, I'm not sure but from the description
of your checkin of 08/30/2003 20:34 it sounds like you were trying to fix bug
216395. If that is the case then your attempt appears not to have been
successful since saving the username and password (clicking 'Yes' to the pop-up)
still overides the value attribute.
OS: Windows XP → All
| Assignee | ||
Comment 3•22 years ago
|
||
fix checked in:
Checking in nsPasswordManager.cpp;
/cvsroot/mozilla/toolkit/components/passwordmgr/base/nsPasswordManager.cpp,v
<-- nsPasswordManager.cpp
new revision: 1.26; previous revision: 1.25
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Comment 4•22 years ago
|
||
*** Bug 218002 has been marked as a duplicate of this bug. ***
Comment 5•22 years ago
|
||
*** Bug 218228 has been marked as a duplicate of this bug. ***
You need to log in
before you can comment on or make changes to this bug.
Description
•