bug 217954/216395 - we need to assign to |userField| regardless of whether there is a value, so we don't crash later when trying to attach autocomplete to the field.